--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,7 +11,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: 💿 Setup
+        run: sudo apt update && sudo apt install -y git jq curl sed libxml2-utils
       - name: 🚀 Run Automation
-        run: bash ./getpocket.sh
+        run: bash ./scripts/getpocket.sh
         env:
           LINKDING_TOKEN: ${{ secrets.LINKDING_TOKEN }}
