--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,6 +3,7 @@ name: Cronjob operations
 on:
   schedule:
     - cron: "*/15 * * * *" # Runs every 15 minuts
+  workflow_dispatch:
 
 jobs:
   pocket-to-linkding:
