--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   pocket-to-linkding:
     runs-on: ubuntu-latest
-    container: ghcr.io/juev/tools:latest
+    container: ghcr.io/juev/rss-parser:latest
     steps:
       - uses: actions/checkout@v3
         with:
